tratando de que por lo menos el register funcione pero sigue dando errores, no se como angelo hizo esto
